# Ivy

./: .gitignore  LICENSE  README.md  _config.yml  conf.lua  main.lua  settings.lua  setup.lua
data/: alloc.lua  init.lua  ops.lua  stats.lua
doc/: Makefile  make.bat  raw.txt  structure.txt  ui.txt
doc/source/: colorspaces.rst  conf.py  figures.R  index.rst  intro.rst  modules.rst  parametric.wxmx
io/: exif.lua  exifNative.lua  im.lua  native.lua  ppm.lua  raw.lua
lib/: templet.lua
lib/fileDialog/: init.lua
lib/fs/: fs_common.lua  fs_posix.lua  fs_win.lua  init.lua
lib/ispc/: CMakeLists.txt  chkstk.asm  ivyJIT.cpp  tasksys.cpp
lib/ivyscript/: Cargo.toml  README.md  init.lua
lib/julia/: init.lua  julia.h
lib/opencl/: C.lua  init.lua
lib/path/: init.lua
lib/zenity/: init.lua
looks/: README.txt
ops/: adjust.lua  clone.lua  color.lua  curves.lua  custom.lua  init.lua  script.lua  select.lua  tools.lua
ops/custom/: custom.txt  dilate.lua  erode.lua
ops/include/: atomic.cl  cielab.cl  colorspace.cl  oklab.cl  random.cl  random.ispc  std.cl  std.ispc
ops/ispc/: cs.ispc  cs_fast.ispc  preview.ispc  pyramid.ispc
thread/: init.lua  scheduler.lua  worker.lua  workerDev.lua  workerHost.lua  workerPar.lua
tools/: bradford.lua  cct.lua  cs.lua  curve.lua  curveBezier.lua  curveCubic.lua  debug.lua  downsize.lua  filter.lua  fuzz.lua  imagePool.lua  lensfun.lua  lut.lua  math.lua  mutex.lua  pipeline.lua  process.lua  tutorial.lua  tweak.lua  unroll.lua
ui/: cursor.lua  image.lua  input.lua  notice.lua  scaleUI.lua  style.lua  widget.lua
(+278 files in other folders)
